k8s/overlays/pprd/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: export-dataverse-pprd.cdsp.sciences-po.fr
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  rules:
  - host: export-dataverse-pprd.cdsp.sciences-po.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: metadata-middleware
            servicePort: 8000
